--- a/application/views/scripts/manutencao/index.phtml
+++ b/application/views/scripts/manutencao/index.phtml
@@ -185,7 +185,7 @@
                                     <td><?= $manutencao['data_fim'] ?></td>
                                     <td><?= $manutencao['valor'] ?></td>                                  
                                     <td>
-                                        <a href="<?= '#myModal' . $manutencao['id_manutencao'] ?>" onclick="onibusPorIdManutencao(<?=$manutencao['id_manutencao'] ?>)" class="btn btn-primary btn-labeled" data-toggle="modal">
+                                        <a href="<?= $this->baseUrl('manutencao/visualizar/id/' . $manutencao['id_manutencao']) ?>" class="btn btn-primary btn-labeled" style="cursor: pointer;">
                                             <span class="btn-label">
                                                 <i class="fas fa-eye" style="color: white;"></i>
                                             </span>
@@ -193,32 +193,6 @@
                                         </a>
                                     </td>
                                 </tr>
-
-                                <!-- Modal -->
-                                <div class="modal fade" id="<?= 'myModal' . $manutencao['id_manutencao'] ?>" tabindex="-1" role="dialog">
-                                    <div class="modal-dialog modal-lg" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h4 class="modal-title">Manutenção</h4>
-                                                <button type="button" class="close" data-dismiss="modal">
-                                                    <span>&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <div class="container-fluid"> 
-                                                    <div class="row">
-                                                        <? foreach ($this->listarOnibusPorIdManutencao as $onibusManutencao): ?>
-                                                            <?= $onibusManutencao['placa'] ?><br>
-                                                            <?= $onibusManutencao['PLACA'] ?>
-                                                        <? endforeach; ?>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Fim Modal -->
-
                             <? endforeach; ?>
                         </tbody>
                     </table>
