Alteração na cor dos botões de download dentro do modal

--- a/application/views/scripts/beneficio/deficiente.phtml
+++ b/application/views/scripts/beneficio/deficiente.phtml
@@ -104,10 +104,10 @@
                                 <label >Atestado Médico</label>
                                 <br>
 
-                                <button class = "btn" name = "atestadoMedico" id = "atestadoMedico">
-                                    <i class = "fa fa-download" style = "color:black"></i>
-                                    <label style = "color:black">
-                                        <a style = "color:black" href = "dist/autorizaconcessao/atestadomedico.pdf"
+                                <button class = "btn btn-dark" name = "atestadoMedico" id = "atestadoMedico">
+                                    <i class = "fa fa-download" style = "color:white"></i>
+                                    <label style = "color:white">
+                                        <a style = "color:white" href = "dist/autorizaconcessao/atestadomedico.pdf"
                                            download = "atestadomedico">Download </a>
                                     </label>
                                 </button>
