--- a/application/views/scripts/beneficio/estudante.phtml
+++ b/application/views/scripts/beneficio/estudante.phtml
@@ -101,20 +101,20 @@
                                 <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">							
                                 <label >Comprovante de Matrícula:</label>
                                 <br>
-                                <button class="btn" name="comprovanteMatricula" value="<?= $solicitacaobeneficio['comprovante_matricula'] ?>" id="comprovanteMatricula">
-                                    <i class="fa fa-download" style="color:black"></i>
-                                    <label style="color:black">
-                                        <a style="color:black" href="dist/autorizaconcessao/comprovantematricula.pdf"
+                                <button class="btn btn-dark" name="comprovanteMatricula" value="<?= $solicitacaobeneficio['comprovante_matricula'] ?>" id="comprovanteMatricula">
+                                    <i class="fa fa-download" style="color:white"></i>
+                                    <label style="color:white">
+                                        <a style="color:white" href="dist/autorizaconcessao/comprovantematricula.pdf"
                                            download="a">Download </a>
                                     </label>
                                 </button>
                                 <br>
                                 <label >Comprovante de Residência:</label>
                                 <br>
-                                <button class="btn" name="comprovanteResidencia" value="<?= $solicitacaobeneficio['comprovante_residencia'] ?>" id="comprovanteResidencia">
-                                    <i class="fa fa-download" style="color:black"></i>
-                                    <label style="color:black">
-                                        <a style="color:black" href="dist/autorizaconcessao/comprovanteresidencia.pdf"
+                                <button class="btn btn-dark" name="comprovanteResidencia" value="<?= $solicitacaobeneficio['comprovante_residencia'] ?>" id="comprovanteResidencia">
+                                    <i class="fa fa-download" style="color:white"></i>
+                                    <label style="color:white">
+                                        <a style="color:white" href="dist/autorizaconcessao/comprovanteresidencia.pdf"
                                            download="a">Download </a>
                                     </label>
                                 </button>
