--- a/application/views/scripts/beneficio/idoso.phtml
+++ b/application/views/scripts/beneficio/idoso.phtml
@@ -101,20 +101,20 @@
                                 <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">									
                                 <label >Carteira do Idoso:</label>
                                 <br>
-                                <button class="btn" value="<?= $solicitacaobeneficio['carteira_idoso'] ?>" id="carteiraIdoso" name="carteiraIdoso">
-                                    <i class="fa fa-download" style="color:black"></i>
+                                <button class="btn btn-dark" value="<?= $solicitacaobeneficio['carteira_idoso'] ?>" id="carteiraIdoso" name="carteiraIdoso">
+                                    <i class="fa fa-download" style="color:whie"></i>
                                     <label style="color:black">
-                                        <a style="color:black" href="dist/autorizaconcessao/carteiraidoso.pdf"
+                                        <a style="color:white" href="dist/autorizaconcessao/carteiraidoso.pdf"
                                            download="CarteiraIdoso">Download </a>
                                     </label>
                                 </button>
                                 <br>
                                 <label >Comprovante de Residência:</label>
                                 <br>
-                                <button class="btn" value="<?= $solicitacaobeneficio['comprovante_residencia'] ?>" name="comprovanteResidencia" id="comprovanteResidencia">
-                                    <i class="fa fa-download" style="color:black"></i>
-                                    <label style="color:black">
-                                        <a style="color:black" href="dist/autorizaconcessao/comprovanteresidencia.pdf"
+                                <button class="btn btn-dark" value="<?= $solicitacaobeneficio['comprovante_residencia'] ?>" name="comprovanteResidencia" id="comprovanteResidencia">
+                                    <i class="fa fa-download" style="color:white"></i>
+                                    <label style="color:white">
+                                        <a style="color:#ffffff" href="dist/autorizaconcessao/comprovanteresidencia.pdf"
                                            download="resid">Download </a>
                                     </label>
                                 </button>
