--- a/application/views/scripts/funcionario/index.phtml
+++ b/application/views/scripts/funcionario/index.phtml
@@ -4,7 +4,7 @@
             <div class="col">
                 <div class="card" style="background-color:rgba(0,0,0,0.5);">
                     <div class="container labelsForm">
-                        <form>
+                        <form id="myform">
                             <Center> 
                             <!-- Conjunto de divs-linha para cada campo do form-->                      
                             <h6>Do cargo</h6>
@@ -13,7 +13,7 @@
                                 <div class="col-sm-5 ">
                                     <select class="custom-select" id="inputGroupSelect01" required>
                                     <? foreach ($this->listaDePerfis as $perfil): ?>
-                                        <option  value="<?= $perfil['id_perfil'] ?>"><?= $perfil['descricao']; ?></option>
+                                        <option value="<?= $perfil['id_perfil'] ?>"><?= $perfil['descricao']; ?></option>
                                     <? endforeach; ?>
                                     <!--
                                         <option selected label="Selecione um cargo." disabled></option>
@@ -30,7 +30,7 @@
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Salario</label>
                                 <div class="col-xs-9">
-                                    <input class="form-control" type="number" value="998" min="998" max="10000" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" id="" required>
+                                    <input class="form-control" type="number" value="998" min="998" max="10000" step="0.01" data-number-to-fixed="2" data-number-stepfactor="100" id="salario" required>
                                 </div>
                             </div>
                                          
@@ -155,19 +155,19 @@
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Senha</label>
                                 <div class="col-xs-9">
-                                <input type="password" name="pass" id="pass" maxlength="30" placeholder="Sua senha" class="form-control" required>
+                                <input type="password" name="senha" id="senha" maxlength="30" placeholder="Sua senha" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-group form-control-sm row">
                                 <label class="col-6 col-form-label">Confirme a senha</label>
                                 <div class="col-xs-9">
-                                <input type="password" name="pass" id="pass1" maxlength="30" placeholder="Sua senha denovo" class="form-control" required>
+                                <input type="password"  id="senha1" maxlength="30" placeholder="Sua senha denovo" class="form-control" required>
                                 </div>
                             </div>
                             <br>
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <button type="submit" for="exampleFormControlFile1" class="btn btn-success btn-sm btn-block cadastrar-funcionario" >Pronto</button>
+                                    <button type="submit" for="exampleFormControlFile1" class="btn btn-success btn-sm btn-block" >Pronto</button>
                                 </div>
                                 <div class="col-sm-6">
                                     <button type="reset" class="btn btn-warning btn-sm btn-block" >Limpar campos</button> 
