integrando h17 layout_admin_geral.phtml

--- a/application/layouts/scripts/layout_admin_geral.phtml
+++ b/application/layouts/scripts/layout_admin_geral.phtml
@@ -45,7 +45,21 @@
                                 Formas de Pagamento
                             </a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("cadastro-estudante") ?>">
+                                Estudantes
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("cadastro-deficiente") ?>">
+                                Deficientes
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("cadastro-idoso") ?>">
+                                Idosos
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
