--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -56,6 +56,11 @@
                                 Apólices
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="<?= $this->baseUrl("rodoviarias-passagem-local") ?>">
+                                Rodoviárias
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
